--- a/k8s-definition/test-1-definition.yml
+++ b/k8s-definition/test-1-definition.yml
@@ -29,7 +29,7 @@ metadata:
   name:  k8s-test-1-service
 spec:
   selector:
-    app:  Selector Label
+    app: k8s-test-1
   type:  ClusterIP
   ports:
   - port:  80
