--- a/k8s-definition/test-1-definition.yml
+++ b/k8s-definition/test-1-definition.yml
@@ -30,7 +30,7 @@ metadata:
 spec:
   selector:
     app: k8s-test-1
-  type:  ClusterIP
+  type:  NodePort
   ports:
   - port:  80
     targetPort:  8100
