add version 0.1 to docker image

--- a/k8s-definition/service-discovery-definition.yml
+++ b/k8s-definition/service-discovery-definition.yml
@@ -15,7 +15,7 @@ spec:
         app: k8s-test-service-discovery
     spec:
       containers:
-        - image:  tiduy1593/k8s-test-service-discovery
+        - image:  tiduy1593/k8s-test-service-discovery:0.1
           name:  k8s-test-service-discovery
           
 ---
