--- a/K8sTest1/pom.xml
+++ b/K8sTest1/pom.xml
@@ -13,7 +13,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>org.ttrung.mai.companion.item.MainItemServer</start-class>
+		<start-class>org.ttrung.mai.k8s.test1.MainTest</start-class>
 		<java-version>1.8</java-version>
 		<spring.boot.version>2.0.0.M7</spring.boot.version>
 		<spring-cloud.version>Finchley.M5</spring-cloud.version>
