--- a/K8sTest2/src/main/resources/application.yml
+++ b/K8sTest2/src/main/resources/application.yml
@@ -8,4 +8,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${K8S_SERVICE_DISCOVERY_HOST}:8761/eureka/
