--- a/k8s-definition/test-1-definition.yml
+++ b/k8s-definition/test-1-definition.yml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: k8s-test-1
@@ -15,11 +15,11 @@ spec:
         app: k8s-test-1
     spec:
       containers:
-        - image:  tiduy1593/k8s-test-1:0.1
+        - image:  tiduy1593/k8s-test-1:0.1.3
           name:  k8s-test-1
           env:
-            - name:  eureka.client.serviceUrl.defaultZone
-              value:  http://k8s-service-discovery-service:8761/eureka/
+            - name: K8S_SERVICE_DISCOVERY_HOST
+              value: k8s-service-discovery-service
 
 
 ---
@@ -30,7 +30,7 @@ metadata:
 spec:
   selector:
     app: k8s-test-1
-  type:  NodePort
+  type:  LoadBalancer
   ports:
   - port:  80
     targetPort:  8100
