--- a/k8s-definition/test-2-definition.yml
+++ b/k8s-definition/test-2-definition.yml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
   name: k8s-test-2
@@ -15,9 +15,9 @@ spec:
         app: k8s-test-2
     spec:
       containers:
-        - image:  tiduy1593/k8s-test-2:0.1
+        - image:  tiduy1593/k8s-test-2:0.1.1
           name:  k8s-test-2
           env:
-            - name:  eureka.client.serviceUrl.defaultZone
-              value:  http://k8s-service-discovery-service:8761/eureka/
+            - name:  K8S_SERVICE_DISCOVERY_HOST
+              value:  k8s-service-discovery-service
 
