--- a/k8s-definition/test-1-definition.yml
+++ b/k8s-definition/test-1-definition.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: k8s-test-1
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: k8s-test-1
@@ -15,7 +15,7 @@ spec:
         app: k8s-test-1
     spec:
       containers:
-        - image:  tiduy1593/k8s-test-1:0.1.3
+        - image:  tiduy1593/k8s-test-1:0.2.1
           name:  k8s-test-1
           env:
             - name: K8S_SERVICE_DISCOVERY_HOST
@@ -30,7 +30,7 @@ metadata:
 spec:
   selector:
     app: k8s-test-1
-  type:  LoadBalancer
+  type:  NodePort
   ports:
   - port:  80
     targetPort:  8100
